[project]
name = "dcm-converter"
version = "0.1.0"
description = "DICOM file converter"
authors = [
    { name = "songminkyu" }
]
requires-python = ">=3.8"

[project.dependencies]
pydicom = "^2.4.4"
numpy = "^1.24.0"
pillow = "^10.0.0"
click = "^8.1.7"

[build-system]
requires = ["uv"]
build-backend = "uv.backend"